# cinemas

./: .gitignore  CMakeLists.txt  README.md  main.cpp
connection/: db_connection.cpp  db_connection.hpp
connection/exceptions/: database_connection_exception.hpp  table_creation_exception.hpp
data/: cinemas.json  movies.json  seances.json  users.json
enums/: customer_gender.hpp  ticket_state.hpp  user_role.hpp
helpers/: call_back_timer.hpp  date_time.hpp  ticket_status_analysis.hpp  utils.hpp
helpers/sources/: date_time.cpp  ticket_status_analysis.cpp  utils.cpp
libs/: date.hpp  headers.hpp  json.hpp  libs.h  libs.hpp  sqlite3.h
model/: cinema.hpp  cinema_room.hpp  customer.hpp  date_time.hpp  movie.hpp  seance.hpp  seance_with_movie.hpp  seat.hpp  ticket.hpp  user.hpp
model/sources/: date_time.cpp  seance.cpp  seance_with_movie.cpp
repository/: cinema_repository.hpp  cinema_room_repository.hpp  customer_repository.hpp  movie_repository.hpp  seance_repository.hpp  seat_repository.hpp  ticket_repository.hpp  user_repository.hpp
repository/sources/: cinema_repository.cpp  (+7 more)
service/: cinema_management.cpp  cinema_management.hpp  cinema_manager.hpp  cinema_service.hpp  movie_and_seance_management.hpp  movie_and_seance_manager.hpp  movie_and_seance_service.hpp  ticket_management.hpp  ticket_manager.hpp  ticket_service.hpp  ticket_status_analysis.hpp  user_management.hpp  user_manager.hpp  user_service.hpp
useful/: call_back_timer.hpp  date_time.hpp
utils/: call_back_timer.hpp  date_time.hpp  date_time_utils.hpp  ticket_status_analyser.hpp  utils.hpp
(+21 files in other folders)
